--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav class="nav-menu">
-        <a href="scripture1.html" class="nav-button">Scripture 1</a>
-        <a href="scripture2.html" class="nav-button">Scripture 2</a>
-        <a href="scripture3.html" class="nav-button">Scripture 3</a>
+        <a href="/X-Me/scripture1.html" class="nav-button">Scripture 1</a>
+        <a href="/X-Me/scripture2.html" class="nav-button">Scripture 2</a>
+        <a href="/X-Me/scripture3.html" class="nav-button">Scripture 3</a>
     </nav>
 </body>
 </html>
